<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculadora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtCalculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_margin="10dp"
                android:textSize="30dp"
                android:textColor="@color/gray"
                android:text="@string/calculo" />
            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_margin="10dp"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:text="@string/txt_resultado"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_limpiar"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:text="@string/ac" />
            <Button
                android:id="@+id/btn_porcentaje"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/porcentaje" />
            <Button
                android:id="@+id/btn_division"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/division" />
            <Button
                android:id="@+id/btn_borrar"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:text="@string/del" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_uno"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/uno" />

            <Button
                android:id="@+id/btn_dos"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/dos" />

            <Button
                android:id="@+id/btn_tres"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/tres" />
            <Button
                android:id="@+id/btn_multiplicacion"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/multiplicacion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cuatro"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/btn_cinco"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/btn_seis"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/seis" />
            <Button
                android:id="@+id/btn_resta"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/resta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_siete"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/siete"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_ocho"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/btn_nueve"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/nueve" />
            <Button
                android:id="@+id/btn_suma"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/suma" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_limpiar2"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:text="@string/ac" />
            <Button
                android:id="@+id/btn_cero"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/cero" />
            <Button
                android:id="@+id/btn_punto"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/green"
                android:textSize="25dp"
                android:text="@string/punto" />
            <Button
                android:id="@+id/btn_resultado"
                android:onClick="onClick"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/resultado" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>